--- a/css/style.css
+++ b/css/style.css
@@ -323,10 +323,15 @@ img{
 }
 
 #center{
-    width: 1200px;
+    width: 100vw;
     height: 325px;
-    margin: 0 auto;
     margin-top: 100px;
+    background-image: url(../images/center_bg_pattern.png);
+}
+
+#center > .container{
+    width: 1200px;
+    margin: 0 auto;
     display: flex;
 }
 
@@ -479,12 +484,18 @@ img{
 }
 
 #adoption{
-    width: 1200px;
+    margin-top: 100px;
+    width: 100vw;
     height: 320px;
+    background-image: url(../images/adoption_bg_pattern.png);
+}
+
+#adoption > .adoption-container{
+    width: 1200px;
     margin: 0 auto;
     position: relative;
-    margin-top: 100px;
     display: flex;
+
 }
 
 #adoption .container{
@@ -500,6 +511,7 @@ img{
     width: 285px;
     height: 250px;
     border: 1px solid #999;
+    background: rgba(255, 255, 255);
     padding: 15px 20px;
     color: #000;
     overflow: hidden;
